@@ -24,15 +24,15 @@
 
 #include <glade/glade.h>
 
-GladeXML *dh_glade_get_file      (const gchar *filename,
-                                  const gchar *root,
-                                  const gchar *domain,
-                                  const gchar *first_required_widget,
-                                  ...);
-void      dh_glade_connect       (GladeXML    *gui,
-                                  gpointer     user_data,
-                                  gchar       *first_widget,
-                                  ...);
+GladeXML *dh_util_glade_get_file      (const gchar *filename,
+                                       const gchar *root,
+                                       const gchar *domain,
+                                       const gchar *first_required_widget,
+                                       ...);
+void      dh_util_glade_connect       (GladeXML    *gui,
+                                       gpointer     user_data,
+                                       gchar       *first_widget,
+                                       ...);
 gchar *   dh_util_build_data_filename (const gchar *first_part,
                                        ...);
 
